--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "AwesomeProject",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "jest-expo": "~18.0.0",
-    "react-native-scripts": "0.0.50",
-    "react-test-renderer": "16.0.0-alpha.12"
-  },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "name": "express-boilerplate",
+  "version": "1.0.0",
+  "description": "A quick and simple ExpressJS boilerplate",
+  "main": "index.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "jest": {
-    "preset": "jest-expo"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PUP-CCIS/express-boilerplate.git"
   },
+  "keywords": [
+    "expressjs",
+    "boilerplate"
+  ],
+  "author": "Micah Andrew Bule",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/PUP-CCIS/express-boilerplate/issues"
+  },
+  "homepage": "https://github.com/PUP-CCIS/express-boilerplate#readme",
   "dependencies": {
-    "axios": "^0.16.2",
-    "expo": "^18.0.3",
-    "moment": "^2.18.1",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.45.1",
-    "react-native-elements": "^0.15.0"
+    "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.3",
+    "express-session": "^1.15.4",
+    "method-override": "^2.3.9",
+    "morgan": "^1.8.2",
+    "mysql": "^2.13.0",
+    "pug": "^2.0.0-rc.2",
+    "serve-static": "^1.12.3"
   }
 }
